fixed speaker wrapping

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -33,3 +33,7 @@
 .sponsors-bg {
     background-image: url(../images/bg/sponsors-bg.png);
 }
+
+div.speaker {
+    height: 390px;
+}
